public enum Coffes {
    MILK,
    MOCHA,
    WHIP,
}
