package Concreteclasses;

public class Cup {
    private int size;

    public int getSize() {
        return size;
    }

    public Cup(int size) {
        this.size = size;
    }
}
