package coffeInterfaces;

public interface Fillable {
    int getLevel();
    void fill(int level);
}
