package coffeInterfaces;

public interface PowerSwitch {
    boolean isOn();
    void turnOn();
    void turnOff();
}
