package coffes;

import coffeAbstractClasses.Beverage;

public class AnyOtherConcreteCoffe extends Beverage {
}
