package coffes;

import coffeAbstractClasses.Beverage;

public class Decaf extends Beverage {
}
