package coffes;

import coffeAbstractClasses.Beverage;

public class Espresso extends Beverage {
}
