package decorator;

import coffeAbstractClasses.Beverage;

public class CondimentDecorator extends Beverage {

    @Override
    public String getDescription() {return "";}
}
